# FastAPI-LLM-Agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  pytest.ini  run_api.sh  run_cli.sh
docs/: ARCHITECTURE.md  CHANGELOG.md  PROJECT_STRUCTURE.md
src/api/: main.py
src/cli/: __init__.py  command_executor.py  command_parser.py  expert_modes.py  input_handler.py  interactive_terminal.py  llm_client_wrapper.py
src/core/: config.py  llm_client.py  logger.py  tools.py
tests/api/: test_api.py
tests/cli/: test_input_handler.py  test_tools.py
tests/core/: conftest.py  test_llm_client.py
